# CMakePractice

t1/: CMakeLists.txt
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt
t3/benchmark/: bench.cpp
t3/include/: hello.h
t3/src/: hello.cpp
